More minor work on layout issues

--- a/themes/read/source/css/base/_layouts.scss
+++ b/themes/read/source/css/base/_layouts.scss
@@ -6,7 +6,6 @@
   @include clearfix;
 
   margin: 0 auto;
-  width: 100%;
   @include breakpoint(break-0) {
     @include maxwidth(0);
   }
@@ -33,6 +32,7 @@
   @include measure(all);
   @include clearfix;
   margin: 0 auto;
+  padding: 0 2rem;
 }
 
 // Base column styles.
