--- a/themes/read/source/css/base/_typography.scss
+++ b/themes/read/source/css/base/_typography.scss
@@ -52,7 +52,7 @@ a {
 
   // Paragraphs. OpenType ligatures and oldstyle figures enabled if available.
   p {
-    @include baseline($fontsize: zeta, $font: $bodytype, $lineheight: 2, $below: 1, $breakpoint: all);
+    @include baseline($fontsize: zeta, $font: $bodytype, $lineheight: 2, $below: 0.81, $breakpoint: all);
 
     font-feature-settings: 'kern', 'onum', 'liga';
   }
@@ -69,7 +69,7 @@ a {
 
   // Heading level 1.
   h1, .alpha {
-    @include sassline($fontsize: alpha, $font: $headingtype, $lineheight: 3, $below: 3, $above: 4, $breakpoint: all);
+    @include sassline($fontsize: alpha, $font: $headingtype, $lineheight: 4.5, $below: 2.6, $above: 2.4, $breakpoint: all);
   }
 
   // Heading level 2.
@@ -79,7 +79,7 @@ a {
 
   // Heading level 3.
   h3, .gamma {
-    @include sassline(gamma, $headingtype, 3, 1.5, 2, all);
+    @include sassline(gamma, $headingtype, 3, 1.2, 1.5, all);
   }
 
   // Heading level 4.
