--- a/themes/read/source/css/modules/_post-item.scss
+++ b/themes/read/source/css/modules/_post-item.scss
@@ -12,6 +12,7 @@
 }
 
 .post-item__link {
+  margin-top: 2.6rem;
   @extend a;
   color: $bodyColour;
   background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0) 50%,lighten($bodyColour,20%) 50%);
@@ -34,6 +35,7 @@
                 -0.1rem 0 $backgroundColour,
                 -0.15rem 0 $backgroundColour;
   }
+
 }
 
 .post-item__subtitle {
